--- a/content/posts/2008-12-25-1222g.md
+++ b/content/posts/2008-12-25-1222g.md
@@ -10,7 +10,8 @@ categories:
 
 というか、ジャズライブ自体を始めたのも今年の４月からだったので、当然と言えば当然かと。。
 
-**12月22日（月）＠目黒バンバンG**  
+# 12月22日（月）＠目黒バンバンG
+
 Start: 20:00
 
 すばらしき、２管クインテット。第3回目に突入。
@@ -25,7 +26,7 @@ Start: 20:00
 - 風間　進一 (Bs)
 - 山本　亨 (Ds)
 
-[1st Stage]
+## 1st Stage
 
 1. Bag's Groove
 2. Black Orpheus
@@ -34,7 +35,7 @@ Start: 20:00
 5. So What
 6. Red Nose Reindeer
 
-[2nd Stage]]
+## 2nd Stage
 
 1. Gibraltar
 2. If I Were A Bell
