--- a/content/posts/2009-02-23-221g.md
+++ b/content/posts/2009-02-23-221g.md
@@ -8,134 +8,78 @@ categories:
 ---
 最近いくつもライブをやっていて思うのですが、曲がかぶるということ。よくやるスタンダードならともかく、それほどやることはなく、まして私がライブで一度もやったことない曲とかがかぶるときがあります。
 
-もちろん、自分フィーチャーの曲で同じ曲をお願いすることがあるのですが（まだ、そんなにレパートリーがないので）、そうではない曲でもかぶると
+もちろん、自分フィーチャーの曲で同じ曲をお願いすることがあるのですが（まだ、そんなにレパートリーがないので）、そうではない曲でもかぶるときがあって、流行とか季節要因とか、ひとの心の流れとかが面識はない人と人との間でなにかが一致することがあるのかなぁということです。なにかの縁か昨日もそういう曲がありました。
 
-きがあって、流行とか季節要因とか、ひとの心の流れとかが面識はない人と人との間でなにかが一致することがあるのかなぁということです。なにかの縁か昨日
-
-もそういう曲がありました。
-
-Whisper Not という曲。こんな感じ。
-
-
-
+Whisper Not という曲。
 
 まあ、私があんまり曲を知らなすぎるところがあるのかも知れません。。
 
 さて、昨日は声量＆グルーブ感たっぷりの @ki さん(Vo.) がゲストで二曲ほど参加。
 
+事前に聞いていたけど、すばらしいボーカリストさんでした!♪
 
-事前に聞いていたけど、すばらしいボーカリストさんでした<img src="http://img.mixi.jp/img/emoji/72.gif" alt="るんるん" class="emoji" border="0" width="16" height="16" />
+2月21日(月) ＠目黒バンバンG
 
-> 2月21日(月) ＠目黒バンバンG
->
-> すばらしき、２管クインテット。
+すばらしき、２管クインテット。
 
->   
-> 毎月Groovyなライブをお届け。今回は素敵なボーカリストをフィーチャー。
->
-> チャージ1500円＋オーダー
 
->   
-> 19:00開場　1st:20:00〜　2nd:21:00〜　3rd:22:00〜
->
-> 【Chocolatone】
+毎月Groovyなライブをお届け。今回は素敵なボーカリストをフィーチャー。
 
->   
-> 野下 聖司 (Ts)
+チャージ1500円＋オーダー
 
->   
-> 久原 博高 (Tp)
 
->   
-> 川村 健 (Pf)
+19:00開場　1st:20:00〜　2nd:21:00〜　3rd:22:00〜
 
->   
-> 風間 進一 (Bs)
+【Chocolatone】
 
->   
-> 山本 亨 (Ds)
->
-> ライブハウス　バンバンG：
+- 野下 聖司 (Ts)
+- 久原 博高 (Tp)
+- 川村 健 (Pf)
+- 風間 進一 (Bs)
+- 山本 亨 (Ds)
 
->   
-> 品川区上大崎２−１６−１　目黒開発ビルB１
+ライブハウス　バンバンG：
 
->   
-> http://<wbr>www1.c<wbr>ts.ne.<wbr>jp/~ba<wbr>nban-g<wbr>/
+品川区上大崎２−１６−１　目黒開発ビルB１
 
->   
-> 03-5423-2212
+03-5423-2212
 
 で、いつものセットリスト。
 
-> [1st Stage]
+[1st Stage]
 
->   
-> 1. Moritat
+1. Moritat
+2. People Make The World Go Round
+3. It Could Happen To You
 
->   
-> 2. People Make The World Go Round
+[2nd Stage]
 
->   
-> 3. It Could Happen To You
->
-> [2nd Stage]
+1. Sabor
+2. Whisper Not
+3. Old Folks
+4. Lullaby Of Birdland (feat. @ki)
+5. Bag's Groove
 
->   
-> 1. Sabor
+[3rd Stage]
 
->   
-> 2. Whisper Not
-
->   
-> 3. Old Folks
-
->   
-> 4. Lullaby Of Birdland (feat. @ki)
-
->   
-> 5. Bag's Groove
->
-> [3rd Stage]
-
->   
-> 1. Killer Joe
-
->   
-> 2. Body And Soul
-
->   
-> 3. Close To You (feat. @ki)
-
->   
-> 4. Manteca
+1. Killer Joe
+2. Body And Soul
+3. Close To You (feat. @ki)
+4. Manteca
 
 Whisper Not は火曜のライブでもやる予定。（メンバーの方々、１曲ネタバレですみません。。）
 
-> 2月24日（火）＠大久保Cafe Dolce Vita
+2月24日（火）＠大久保Cafe Dolce Vita
 
->   
-> よくぞ集めたこのメンバー。みなさんスーパー奏者たち。
+よくぞ集めたこのメンバー。みなさんスーパー奏者たち。
 
->   
-> 岡崎みや（vo/vln）
+- 岡崎みや（vo/vln）
+- 青木武俊（gt）
+- 風間進一（b）
+- 浦谷和幸（ds）
 
->   
-> 青木武俊（gt）
+新宿区北新宿1−12−11エトワールビル北新宿B１
 
->   
-> 風間進一（b）
+（大久保駅より徒歩3分、新宿駅より徒歩15分）
 
->   
-> 浦谷和幸（ds）
->
-> 新宿区北新宿1−12−11エトワールビル北新宿B１
-
->   
-> （大久保駅より徒歩3分、新宿駅より徒歩15分）
-
->   
-> 電話：０３−３３６４−１５３０
-
->   
-> http://<wbr>homepa<wbr>ge3.ni<wbr>fty.co<wbr>m/sekk<wbr>y/dolc<wbr>evita/<wbr>cafe.h<wbr>tml
+電話：０３−３３６４−１５３０
