Edited a part of pages

--- a/content/posts/2009-02-28-227.md
+++ b/content/posts/2009-02-28-227.md
@@ -8,81 +8,40 @@ categories:
 ---
 今日は仕事を休んだ。
 
-
 いけてない社会人なのはわかってます。でも、もたない。
 
 いつものセットリスト。
 
+2月27日（金）＠藤が丘ブリーズサーファーズバー  
+３年以上お世話になっている近所のお店でまさかライブができるとは！！
 
+手始めに、スタンダードをさらりと、やる感じで。  
+Start: 21:00 (2 Stage)
 
-> 2月27日（金）＠藤が丘ブリーズサーファーズバー
+## メンバー
+- 鎌倉 涼子(Vln)
+- 西 隆則(Gt)
+- 風間進一(Bs)
 
->   
-> ３年以上お世話になっている近所のお店でまさかライブができるとは！！
+神奈川県横浜市青葉区藤が丘1丁目27-34  
+045-972-4500  
 
->   
-> 手始めに、スタンダードをさらりと、やる感じで。
->
-> Start: 21:00
+[1st Stage]
+1. But Not For Me  
+2. Body And Soul  
+3. Someday Prince Will Come  
+4. Gentle Rain  
+5. Misty  
+6. East Of The Sun  
 
->   
-> 2 Stage
->
-> 鎌倉 涼子(Vln)
-
->   
-> 西 隆則(Gt)
-
->   
-> 風間進一(Bs)
->
-> 神奈川県横浜市青葉区藤が丘1丁目27-34
-
->   
-> 045-972-4500
-
-> [1st Stage]
-
->   
-> 1. But Not For Me
-
->   
-> 2. Body And Soul
-
->   
-> 3. Someday Prince Will Come
-
->   
-> 4. Gentle Rain
-
->   
-> 5. Misty
-
->   
-> 6. East Of The Sun
->
-> [2nd Stage]
-
->   
-> 1. Old Folks
-
->   
-> 2. Fly Me To The Moon feat. みちこふ
-
->   
-> 3. It's A Small World
-
->   
-> 4. When You Wish Upon A Star
-
->   
-> 5. Over The Rainbow
-
->   
-> 6. Take The A Train
-
->   
-> 7. Now &#8216;s The Time
+[2nd Stage]
+1. Old Folks  
+2. Fly Me To The Moon feat. みちこふ  
+3. It's A Small World  
+4. When You Wish Upon A Star  
+5. Over The Rainbow  
+6. Take The A Train  
+7. Now 's The Time  
 
 2nd セットには我らがアイドル、みちさんに参加いただき、マイクレスで歌ってました。ばっちり、いけていました。
 
