--- a/content/posts/2009-03-06-35.md
+++ b/content/posts/2009-03-06-35.md
@@ -6,60 +6,52 @@ date: 2009-03-05T16:41:11+09:00
 categories:
   - Jazz
 ---
-It begins to tell,
 
-&#8216;round midnight, midnight.
+> It begins to tell,  
+> round midnight, midnight.
 
 さて、今日もセットリスト
 
-> 3月5日(木) ＠横浜エルスウェーニョ
->
-> 昨年いろいろとお世話になったお二人とトリオで。
->
-> 川道 亮治 （Pf）
->
-> 風間 進一 （Bs）
->
-> 浦谷 和幸 (Dr)
->
-> 横浜市西区南幸２−１−２２
->
-> 相鉄ムービル３Ｆ
->
-> TEL:045-322-30１4
->
-> PM6:00〜AM2:00
->
-> <a href="http://www.asahi-net.or.jp/%7Emd2n-iwks/" target="_blank">http://<wbr />www.asa<wbr />hi-net.<wbr />or.jp/~<wbr />md2n-iw<wbr />ks/</a>
+---
 
-> [1st Stage]
->
-> Stella By Starlight
->
-> &#8216;Round Midnight
->
-> Nardis
->
-> Solar
->
-> [2nd Stage]
->
-> Beautiful Love
->
-> For All We Know
->
-> Bluesette
->
-> I Hear A Rhapsody
->
-> [3rd Stage]
->
-> (Session Time)
->
-> If I Should Lose You
+## 3月5日(木) ＠横浜エルスウェーニョ
 
-浦谷さんの選曲は硬派ですね。ジャズを始めたころからやってみたかった &#8216;Round midnight' も選曲いただき、そしてテーマ半分をアルコでやらせてもらいました。そして、川道さんはピアノトリオはひとりひとりが主張しないと成り立たないって言っていたのが印象的でした。
+昨年いろいろとお世話になったお二人とトリオで。
 
-眠気が終止つきまとい、荒い演奏だったかもしれないですが、ナチュラルハイ状態で、構えず、自分自身の中身を引っ張りだして、感性に忠実に。いままで自分が引き出せなかった引き出しを開けて演奏できたような気がして、今日は満足でした。
+- **川道 亮治** （Pf）  
+- **風間 進一** （Bs）  
+- **浦谷 和幸** (Dr)  
 
-また、ピアノトリオはぜひやってみたいと思った真夜中。
+**住所:** 横浜市西区南幸２−１−２２ 相鉄ムービル３Ｆ  
+**TEL:** 045-322-30１4  
+**営業時間:** PM6:00〜AM2:00  
+[公式サイト](http://www.asahi-net.or.jp/%7Emd2n-iwks/)
+
+---
+
+### 🎶 Setlist 🎶
+
+#### [1st Stage]
+1. Stella By Starlight  
+2. &#8216;Round Midnight  
+3. Nardis  
+4. Solar  
+
+#### [2nd Stage]
+1. Beautiful Love  
+2. For All We Know  
+3. Bluesette  
+4. I Hear A Rhapsody  
+
+#### [3rd Stage]
+- (Session Time)  
+- If I Should Lose You  
+
+---
+
+浦谷さんの選曲は硬派ですね。ジャズを始めたころからやってみたかった **'Round Midnight** も選曲いただき、そしてテーマ半分をアルコでやらせてもらいました。
+
+川道さんはピアノトリオはひとりひとりが主張しないと成り立たないって言っていたのが印象的でした。
+
+眠気が終始つきまとい、荒い演奏だったかもしれないですが、ナチュラルハイ状態で、構えず、自分自身の中身を引っ張りだして、感性に忠実に。  
+いままで自分が引き出せなかった引き出しを開けて演奏できたような気が
