--- a/content/posts/2009-03-23-322.md
+++ b/content/posts/2009-03-23-322.md
@@ -6,66 +6,48 @@ date: 2009-03-22T17:09:02+09:00
 categories:
   - Jazz
 ---
-今日のお店、みんなエルスって略して呼んでるけど、エル・スウェーニョで切るのが正んですね。お店の前の張り紙に、スウェーニョとは「夢」のことと書いてありました。
-
+今日のお店、みんなエルスって略して呼んでるけど、エル・スウェーニョで切るのが正んですね。お店の前の張り紙に、スウェーニョとは「夢」のことと書いてありました。  
 みんなの夢が詰まったお店。そんなところでしょうかね。ふむふむ。
 
 本日はまち子学生最終公演の日でした。しっかりまとめて無理せず２ステージ。いいライブだったのではないでしょうか。バーテンの重安君も明日卒業式とのことで、夕方からエルス関係者が大勢集まっていて、皆さん既にライブ前からできあがってました。
 
 さて、いつものセットリスト。
 
-> 3月22日(日) ＠横浜エルスウェーニョ
->
-> まち子卒業記念ライブ。横浜の歌判魔術師みっちーさんとこのメンバーでは二度目のライブ。深く逞しい歌声とこだわった選曲の一夜。
->
-> 小川 真智子 （Vo）
->
-> 川道 亮治 （Pf）
->
-> 風間 進一 （Bs）
->
-> ＢＡＲ　エルスウェーニョ
->
-> 横浜市西区南幸２−１−２２
->
-> 相鉄ムービル３Ｆ
->
-> TEL:045-322-30１4
->
-> PM6:00 - AM2:00
->
-> <a href="http://www.asahi-net.or.jp/%7Emd2n-iwks/" target="_blank">http://<wbr />www.asa<wbr />hi-net.<wbr />or.jp/~<wbr />md2n-iw<wbr />ks/</a>
+## 3月22日(日) ＠横浜エルスウェーニョ
 
-> [1st Stage]
->
-> 1. I Hear A Rhapsody [Pf-Bs Duo]
->
-> 2. The Girl from Ipanema
->
-> 3. You And The Night And The Music
->
-> 4. What A Wonderful World
+まち子卒業記念ライブ。横浜の歌判魔術師みっちーさんとこのメンバーでは二度目のライブ。深く逞しい歌声とこだわった選曲の一夜。
 
-[2nd Stage]
+### メンバー
+- 小川 真智子 （Vo）
+- 川道 亮治 （Pf）
+- 風間 進一 （Bs）
 
-1. Old Folks [Pf-Bs Duo]
+ＢＡＲ　エルスウェーニョ  
+横浜市西区南幸２−１−２２  
+相鉄ムービル３Ｆ  
+TEL: 045-322-3014  
+PM6:00 - AM2:00  
+[エルスウェーニョの詳細はこちら](http://www.asahi-net.or.jp/%7Emd2n-iwks/)
 
-2. La La Means I Love You
+### [1st Stage]
+1. I Hear A Rhapsody [Pf-Bs Duo]  
+2. The Girl from Ipanema  
+3. You And The Night And The Music  
+4. What A Wonderful World  
 
-3. Lullaby Of Birdland
+### [2nd Stage]
+1. Old Folks [Pf-Bs Duo]  
+2. La La Means I Love You  
+3. Lullaby Of Birdland  
+4. Orange Colored Sky  
 
-4. Orange Colored Sky
-
-[3rd Stage]
-
-* Jam Session Time
+### [3rd Stage]
+* Jam Session Time  
 
 ライブが終わってから、なんだか弾き足りなくて、自然とみっちーさんとデュオで二つの曲をやりました。
 
-> [Extra Stage]
->
-> 1. Confirmation
->
-> 2. Blue Monk
+### [Extra Stage]
+1. Confirmation  
+2. Blue Monk  
 
 こういう時間っていいなと思った。ライブ終了後のお客さんが幾分帰ったあとの、ひっそりとしたデュオ演奏。ちょっと残ったお客さんがそれとなく聴いているのだけれど、プレイヤーが自分のために演奏している。そして、そういうときに本当の Groove があったりするなと。
