--- a/content/posts/2009-04-07-46.md
+++ b/content/posts/2009-04-07-46.md
@@ -6,7 +6,7 @@ date: 2009-04-06T15:03:18+09:00
 categories:
   - Jazz
 ---
-4月から新生不肖風間進一始働しました。先週平日はたまった仕事を一気に集中して前に進め、夜は個人練習。でも、自宅はいつものように Gliga を弾けないので、SLB-200 で練習し、土曜は久々に河原さんのレッスンに行き、いつものジムに行った後、夜な夜な近くのスタジオに行って、弾き足りなかった Gligaをみっちり二時間弓でスケール練習や Simadl をやってきました。
+4月から新生不肖風間進一始働しました。先週平日はたまった仕事を一気に集中して前に進め、夜は個人練習。でも、自宅はいつものように Gliga を弾けないので、SLB-200 で練習し、土曜は久々に河原さんのレッスンに行き、いつものジムに行った後、夜な夜な近くのスタジオに行って、弾き足りなかった Gliga をみっちり二時間弓でスケール練習や Simadl をやってきました。
 
 そして、日曜のライブ当日は昼からドラマーのもっちとリズム隊練習をまた二時間みっちりやって、ライブ前リハはカワケン君不在でしたが、ピアノレスでこなし、いざ本番へ。
 
@@ -18,126 +18,96 @@ categories:
 
 さて、いつものセットリスト。
 
-> 4月5日（日）@用賀 キンのツボ
->
-> すばらしき、２管クインテット。
->
-> 毎月Groovyなライブをお届け。
->
-> 【Chocolatone】
->
-> 野下 聖司 (Ts)
->
-> 久原 博高 (Tp)
->
-> 川村 健 (Pf)
->
-> 風間 進一 (Bs)
->
-> 山本 亨 (Ds)
->
-> １８：３０　ｓｔａｒｔ
->
-> ０：００　ｅｎｄ
->
-> ＭＣ　1,000円　（ご飲食は別途／本格炭火焼きの焼き鳥が低価格でお楽しみいただけます。）
->
-> 世田谷区用賀２ー３６ー１３　アイリス用賀ビルB1
->
-> （03）3707-0346
->
-> <a href="http://www.jazz.co.jp/LiveSpot/kintubo.html" target="_blank">http://<wbr />www.jaz<wbr />z.co.jp<wbr />/LiveSp<wbr />ot/kint<wbr />ubo.htm<wbr />l</a>
-
-> [2nd Stage]
->
-> 1. Caravan
->
-> 2. Isfahan
->
-> 3. High Fly
->
-> 4. Tangerine
-
-[3rd Stage]
-
-1. I'll Drink To That
-
-2. People Make The World Go Round
-
-3. Child Is Born (Piano Trio)
-
-4. Sabor
-
-[4th Stage with Noriko Katoh Quartet]
-
-1. Just Friend
-
-2. Stolen Moments
-
-3. I'll Remember April
-
-昨日は、オリカさんとめぐみさんが聴きに来てくださいました。忘れてはいけないなって近頃思うのが、聴きに来てくれる方々がいるということで、つまらないって思わせて帰らせるわけにはいかないって思わせてもらえるのがまた、ありがたいということです。
-
-Chocolatone は今月、あと二つライブしますので、お時間ありましたら、ぜし聴きにきてみてください。Groove 感ある大人な２管ジャズをお届けします。
-
-> 4月19日(日) ＠目黒 バンバンG
->
-> すばらしき、２管クインテット。
->
-> 毎月Groovyなライブをお届け。
->
-> Music Charge: 1500円（ご飲食は別途となります。１drinkでもＯＫです。）
->
-> 19:00開場　1st:20:00-　2nd:21:00-　3rd:22:00-
->
-> JR目黒駅下車　＊徒歩３分
->
-> 【Chocolatone】
->
-> 野下 聖司 (Ts)
->
-> 久原 博高 (Tp)
->
-> 川村 健 (Pf)
->
-> 風間 進一 (Bs)
->
-> 山本 亨 (Ds)
->
-> ライブハウス　バンバンG：
->
-> 品川区上大崎２-１６-１　目黒開発ビルB１
->
-> http://<wbr />www1.ct<wbr />s.ne.jp<wbr />/~banba<wbr />n-g/
->
-> 03-5423-2212
-
-> 4月29日（水／祝）@池袋 Ｂａｒ　Ｈｏｔ　Ｐｅｐｐｅｒ
+### 4月5日（日）@用賀 キンのツボ
 
 すばらしき、２管クインテット。
 
 毎月Groovyなライブをお届け。
 
-【Chocolatone】
+**【Chocolatone】**  
+- 野下 聖司 (Ts)  
+- 久原 博高 (Tp)  
+- 川村 健 (Pf)  
+- 風間 進一 (Bs)  
+- 山本 亨 (Ds)
 
-野下 聖司 (Ts)
+- **18:30 start**
+- **0:00 end**
+- **MC**: 1,000円（ご飲食は別途／本格炭火焼きの焼き鳥が低価格でお楽しみいただけます。）
+- **住所**: 世田谷区用賀２－３６－１３ アイリス用賀ビルB1  
+- **電話**: （03）3707-0346  
+- [キンのツボ ホームページ](http://www.jazz.co.jp/LiveSpot/kintubo.html)
 
-久原 博高 (Tp)
+#### [2nd Stage]
+1. Caravan  
+2. Isfahan  
+3. High Fly  
+4. Tangerine
 
-川村 健 (Pf)
+#### [3rd Stage]
+1. I'll Drink To That  
+2. People Make The World Go Round  
+3. Child Is Born (Piano Trio)  
+4. Sabor
 
-風間 進一 (Bs)
+#### [4th Stage with Noriko Katoh Quartet]
+1. Just Friend  
+2. Stolen Moments  
+3. I'll Remember April
 
-山本 亨 (Ds)
+昨日は、オリカさんとめぐみさんが聴きに来てくださいました。忘れてはいけないなって近頃思うのが、聴きに来てくれる方々がいるということで、つまらないって思わせて帰らせるわけにはいかないって思わせてもらえるのがまた、ありがたいということです。
 
-open 19:00 close 24:00 1st: 20:00- 2nd: 21:30- 3rd: 23:00-
+Chocolatone は今月、あと二つライブしますので、お時間ありましたら、ぜひ聴きにきてみてください。Groove 感ある大人な２管ジャズをお届けします。
 
-MC: 2,500円 （ご飲食は別途になります。　おいしいお酒＆カクテル多数ご用意した気軽にたのしめる本格派Ｂａｒです。）
+### 4月19日(日) ＠目黒 バンバンG
 
-豊島区西池袋１ー３７ー１５　ロサ会館　隣　西形ビル５Ｆ
+すばらしき、２管クインテット。
 
-（03)3971-8669
+毎月Groovyなライブをお届け。
 
-<a href="http://jazzhotpepper.com/" target="_blank">http://<wbr />www.qur<wbr />ie.ne.j<wbr />p/hotpe<wbr />pper/</a>
+- **Music Charge**: 1500円（ご飲食は別途となります。１drinkでもＯＫです。）
+- **19:00開場**
+  - **1st**: 20:00-
+  - **2nd**: 21:00-
+  - **3rd**: 22:00-
+
+- **JR目黒駅下車 徒歩３分**
+
+**【Chocolatone】**  
+- 野下 聖司 (Ts)  
+- 久原 博高 (Tp)  
+- 川村 健 (Pf)  
+- 風間 進一 (Bs)  
+- 山本 亨 (Ds)
+
+- **ライブハウス バンバンG**  
+  品川区上大崎２-１６-１ 目黒開発ビルB１  
+  [バンバンG ホームページ](http://www1.cts.ne.jp/~banban-g/)  
+  **電話**: 03-5423-2212
+
+### 4月29日（水／祝）@池袋 Ｂａｒ　Ｈｏｔ　Ｐｅｐｐｅｒ
+
+すばらしき、２管クインテット。
+
+毎月Groovyなライブをお届け。
+
+**【Chocolatone】**  
+- 野下 聖司 (Ts)  
+- 久原 博高 (Tp)  
+- 川村 健 (Pf)  
+- 風間 進一 (Bs)  
+- 山本 亨 (Ds)
+
+- **open**: 19:00  
+- **close**: 24:00  
+  - **1st**: 20:00-  
+  - **2nd**: 21:30-  
+  - **3rd**: 23:00-
+
+- **MC**: 2,500円（ご飲食は別途になります。おいしいお酒＆カクテル多数ご用意した気軽に楽しめる本格派Ｂａｒです。）
+
+- **住所**: 豊島区西池袋１－３７－１５ ロサ会館 隣 西形ビル５Ｆ  
+- **電話**: (03)3971-8669  
+- [Hot Pepper ホームページ](http://jazzhotpepper.com/)
 
 ※アップしていた Youtube の音源は諸事あり、取り下げました。
