--- a/content/posts/2009-05-30-527_zimagine_1.md
+++ b/content/posts/2009-05-30-527_zimagine_1.md
@@ -6,143 +6,85 @@ date: 2009-05-30T07:36:12+09:00
 categories:
   - Jazz
 ---
-多くのお客さんにお越し頂きまして、ありがとうございました。仕事仲間や演奏仲間が多く聴きにきてくださり、楽しんでいただけたようでなによりでした！
+# ライブレポート＆お知らせ
 
-水曜のライブは外苑前の夜とあって、神宮球場の野球で人やクルマが多く、駐車場探すのが大変でしたが、裏に行くと結構リーズナブルな駐車場集中スポットを発見。今後は探さなくてすみそうです。
+多くのお客さんにお越し頂きまして、ありがとうございました！  
+仕事仲間や演奏仲間が多く聴きにきてくださり、楽しんでいただけたようでなによりでした！
 
-> [1st Stage]
+水曜のライブは外苑前の夜とあって、神宮球場の野球で人やクルマが多く、駐車場探しが大変でしたが、  
+裏に行くとリーズナブルな駐車場集中スポットを発見。今後は探さなくてすみそうです。
 
->   
-> 1. Bag's Groove (Funk)
+---
 
->   
-> 2. I Remember Clifford (Tp & Pf Duo)
+## 🎵 5月27日（水）＠外苑前 Z・imagine
 
->   
-> 3. Impressions (Fast 4 Beat)
+### セットリスト  
 
->   
-> 4. What Is This Thing Called Love (Pf Trio)
+**[1st Stage]**  
+1. Bag's Groove (Funk)  
+2. I Remember Clifford (Tp & Pf Duo)  
+3. Impressions (Fast 4 Beat)  
+4. What Is This Thing Called Love (Pf Trio)  
+5. Sabor (Cuban Ver.)  
+6. Ribbon In The Sky (R&B/Soul) feat. @ki  
+7. Close To You (Samba) feat. @ki  
 
->   
-> 5. Sabor (Cuban Ver.)
+**[2nd Stage]**  
+1. Straight Ahead (Blues)  
+2. Feel Like Makin' Love (R&B/Soul) feat. @ki  
+3. Englishman in New York (Reggae) feat. @ki  
+4. Tangerine (Latin & 4 Beat Mix)  
+5. People Make the World Go Round (Alternative)  
+6. Caravan (Afro)  
 
->   
-> 6. Ribbon In The Sky (R&B/Soul) feat. @ki
+### ライブ情報  
+- **Open:** 19:00  
+- **1st Stage:** 19:30  
+- **2nd Stage:** 20:30  
+- **Music Charge:** 2,500円  
 
->   
-> 7. Close To You (Samba) feat. @ki
->
-> [2nd Stage]
+### 【Chocolatone】  
+- 野下 聖司 (Ts)  
+- 久原 博高 (Tp)  
+- 川村 健 (Pf)  
+- 風間 進一 (Bs)  
+- 山本 亨 (Ds)  
 
->   
-> 1. Straight Ahead (Blues)
+### 会場情報  
+**Z・imagine**  
+東京都港区北青山2-7-17 青山鈴越ビルB1F  
+（地下鉄銀座線外苑前駅3番出口 ファーストキッチンの地下）  
+[公式サイト](http://www.radio-zipangu.com/zimagine/)  
+📞 03-3796-6757  
 
->   
-> 2. Feel Like Makin' Love (R&B/Soul) feat. @ki
+---
 
->   
-> 3. Englishman in New York (Reggae) feat. @ki
+## 🎶 次回ライブのお知らせ  
 
->   
-> 4. Tangerine (Latin & 4 Beat Mix)
+さて、今日はこのあとホームステージの目黒で同じく **Chocolatone** のライブです！  
+お近くにいらっしゃる方は、ぜひ足を運んでいただけるとうれしいです。
 
->   
-> 5. People Make the World Go Round (Alternative)
+### 📅 5月30日（土）＠目黒 バンバンG  
+- **Open:** 19:00  
+- **1st Stage:** 20:00  
+- **2nd Stage:** 21:00  
+- **3rd Stage:** 22:00  
+- **Music Charge:** 1,500円  
 
->   
-> 6. Caravan (Afro)
+### 【Chocolatone】  
+- 野下 聖司 (Ts)  
+- 久原 博高 (Tp)  
+- 川村 健 (Pf)  
+- 風間 進一 (Bs)  
+- 山本 亨 (Ds)  
 
-> 5月27日（水）＠外苑前 Z・imagine
->
-> 毎月Groovyなライブをお届け。
+### 会場情報  
+**ライブハウス バンバンG**  
+東京都品川区上大崎2-16-1 目黒開発ビルB1  
+（JR目黒駅 徒歩3分）  
+[公式サイト](http://www1.cts.ne.jp/~banban-g/)  
+📞 03-5423-2212  
 
->   
-> 今回は私のおすすめで駅からアクセスのよく、雰囲気のよいZ・imagineでライブすることに。
->
-> Open: 19:00
+---
 
->   
-> 1st Stage: 19:30
-
->   
-> 2nd Stage: 20:30
-
->   
-> Music Charge: 2,500円
->
-> 【Chocolatone】
-
->   
-> 野下 聖司 (Ts)
-
->   
-> 久原 博高 (Tp)
-
->   
-> 川村 健 (Pf)
-
->   
-> 風間 進一 (Bs)
-
->   
-> 山本 亨 (Ds)
->
-> Z・imagine:
-
->   
-> 東京都港区北青山2-7-17 青山鈴越ビルB1F
-
->   
-> ※地下鉄銀座線外苑前駅３番出口　ファーストキッチンの地下
-
->   
-> http://<wbr>www.rad<wbr>io-zipa<wbr>ngu.com<wbr>/zimagi<wbr>ne/
-
->   
-> 03-3796-6757
-
-<span class="large"><br />さて</span>、今日は、このあとホームステージの目黒で同じく Chocolatone のライブです。お近く通りましたら足を運んでいただけるとうれしいです。
-
-> 5月30日(土) ＠目黒 バンバンG
->
-> すばらしき、２管クインテット。
-
->   
-> 毎月Groovyなライブをお届け。
->
-> Music Charge: 1500円
-
->   
-> 19:00開場　1st:20:00-　2nd:21:00-　3rd:22:00-
-
->   
-> JR目黒駅下車　＊徒歩３分
->
-> 【Chocolatone】
-
->   
-> 野下 聖司 (Ts)
-
->   
-> 久原 博高 (Tp)
-
->   
-> 川村 健 (Pf)
-
->   
-> 風間 進一 (Bs)
-
->   
-> 山本 亨 (Ds)
->
-> ライブハウス　バンバンG：
-
->   
-> 品川区上大崎２-１６-１　目黒開発ビルB１
-
->   
-> http://<wbr>www1.ct<wbr>s.ne.jp<wbr>/~banba<wbr>n-g/
-
->   
-> 03-5423-2212
+🎷 毎月Groovyなライブをお届け！お楽しみに！  
