--- a/content/posts/2008-11-29-post.md
+++ b/content/posts/2008-11-29-post.md
@@ -9,4 +9,4 @@ categories:
 ---
 音楽活動が結構盛んになってきたので、新たに「ウッドベース奏者　風間進一 （Shinichi Kazama）」としての紹介ページに切り替えました。今後は、活動スケジュールや自身の情報などをこちらを通じて行っていこうと思います。
 
-これまで、「ユーラシアの風 – Blowin' in the Eurasian Wind -」として公開していたブログは [こちら](http://www.eawind.net/?page_id=644) に移しました。すでに旅をしてから５年以上たっていますが、近頃更新ができておらず、帰国までの日記がまだまだのこっているので、時間できたときに、また投稿しようと思っています。
+これまで、「ユーラシアの風 – Blowin' in the Eurasian Wind -」として公開していたブログはすでに旅をしてから５年以上たっていますが、近頃更新ができておらず、帰国までの日記がまだまだのこっているので、時間できたときに、また投稿しようと思っています。
