--- a/content/posts/2009-03-21-321.md
+++ b/content/posts/2009-03-21-321.md
@@ -6,119 +6,71 @@ date: 2009-03-21T13:05:48+09:00
 categories:
   - Jazz
 ---
-fm*最終公演。
+# fm*最終公演
 
-このバンドは、コンセプチュアルにいろんな特集を組んでライブしました。水にまつわる曲、デューク・エリントン＆ビリー・ストレイホーン特集、多
+このバンドは、コンセプチュアルにいろんな特集を組んでライブしました。水にまつわる曲、デューク・エリントン＆ビリー・ストレイホーン特集、多言語、５拍子とユニゾンアドリブ、そしてビートルズでのアンコールとクリエイティブにいろいろなことをチャレンジできたバンドでした。今回で公演三回目。月特集を今日はやってみました。今の私の演奏スタイル＆音楽性として、いい糧になったと思う。
 
-言語、５拍子とユニゾンアドリブ、そしてビートルズでのアンコールとクリエイティブにいろいろなことをチャレンジできたバンドでした。今回で公演三回目。月特
+本日は、ゲストに**yuuutaさん**こと、木村雄太さんをお迎えしてのライブでもありました。Dexter Gordon を敬愛するとの話を聞いたのですが、まさにくりなす音は野太く、重いテナーの音色でした。
 
-集を今日はやってみました。今の私の演奏スタイル＆音楽性として、いい糧になったと思う。
+---
 
-本日は、ゲストにyuuutaさんこと、木村雄太さんをお迎えしてのライブでもありました。Dexter Gordon を敬愛するとの話を聞いたのですが、まさにくりなす音は野太く、重いテナーの音色でした。
+## 3月21日（土）＠水道橋・東京倶楽部
 
-さて、いつものセットリスト。
+fm*として３度目のライブ。今回はみゃちゃんの卒業記念ライブでもあります。
 
-> 3月21日（土）＠水道橋・東京倶楽部
->
-> fm*として３度目のライブ。今回はみゃちゃんの卒業記念ライブでもあります。
+また、これを持って fm* のライブは最終回。心に沁みるライブになるはず！
 
->   
-> また、これを持って fm* のライブは最終回。心に沁みるライブになるはず！
->
-> 1st：14:00-14:40
+- **1st Stage**：14:00-14:40  
+- **2nd Stage**：15:10-15:50  
+- **チャージ**：1575円（1ドリンク付き）  
 
->   
-> 2nd：15:10-15:50
->
-> チャージ：1575円（1ドリンク付き）
->
-> 【force majeure*】
+---
 
->   
-> 岡崎みや（Vo）
+### 【force majeure*】  
+- **岡崎みや**（Vo）  
+- **大関麻子**（Pf, Cho）  
+- **風間進一**（Bs, Cho）  
 
->   
-> 大関麻子（Pf, Cho）
+### 【guest】  
+- **木村雄太** (Ts)  
 
->   
-> 風間進一（Bs, Cho）
->
-> 【guest】
+**場所:** 東京倶楽部  
+**住所:** 東京都千代田区神田駿河台2-11-16 さいかち坂ビル地下1階  
+**TEL:** 03-(3293)-6056  
+[公式サイト](http://www.tokyo-club.com/intro/)
 
->   
-> 木村雄太 (Ts)
->
-> 東京倶楽部
+---
 
->   
-> 東京都千代田区神田駿河台2-11-16
+### 🎶 Setlist 🎶
 
->   
-> さいかち坂ビル地下1階
+#### [1st Stage]
+1. My Favorite Things  
+2. Softly, As In A Morning Sunrise  
+3. 蘇州夜曲  
+4. Love Theme From Spartacus  
+5. The Nearness Of You  
+6. There Will Never Be Another You [ts-bs duo] feat. yuuuta  
+7. Bei Mir Bist Du Schon feat. yuuuta  
 
->   
-> 03-(3293)-6056
+#### [2nd Stage]
+1. Bella Rosa [pf-b duo]  
+2. Lush Life  
+3. Don't Miss You At All [vo-pf duo]  
+4. Do Nothing Till You Hear From Me  
+5. Fly Me To The Moon  
+6. Taking A Chance On Love & It's Only A Paper Moon [vo-b duo]  
+7. Polka Dots And Moon Beams feat. yuuuta  
 
->   
-> http://<wbr>www.tok<wbr>yo-club<wbr>.com/in<wbr>tro/
+#### Encore
+- Come Together feat. yuuuta  
 
-> [1st Stage]
+---
 
->   
-> 1. My Favorite Things
+**Softly, As In A Morning Sunrise**ってジャズを習い始めたときに一番最初にやった課題曲だったのですが、これを歌判でやれたのは一つの収穫な気がしました。総括したような。
 
->   
-> 2. Softly, As In A Morning Sunrise
-
->   
-> 3. 蘇州夜曲
-
->   
-> 4. Love Theme From Spartacus
-
->   
-> 5. The Nearness Of You
-
->   
-> 6. There Will Never Be Another You [ts-bs duo] feat. yuuuta
-
->   
-> 7. Bei Mir Bist Du Schon feat. yuuuta
->
-> [2nd Stage]
-
->   
-> 1. Bella Rosa [pf-b duo]
-
->   
-> 2. Lush Life
-
->   
-> 3. Don't Miss You At All [vo-pf duo]
-
->   
-> 4. Do Nothing Till You Hear From Me
-
->   
-> 5. Fly Me To The Moon
-
->   
-> 6. Taking A Chance On Love & It's Only A Paper Moon [vo-b duo]
-
->   
-> 7. Polka Dots And Moon Beams feat. yuuuta
->
-> Encore. Come Together feat. yuuuta
-
-Softly, As In A Morning Sunrise ってジャズを習い始めたときに一番最初にやった課題曲だったのですが、これを歌判でやれたのは一つの収穫な気がしました。総括したような。
-
-Softly, as in a morning sunrise
-
-
-The light of love comes stealing
-
-
-Into a new born day
+> *Softly, as in a morning sunrise  
+> The light of love comes stealing  
+> Into a new born day*
 
 みゃちゃんには有意義なこのバンドに誘ってもらえて、感謝の一言です。一歩奥まで手が届かなかった演奏領域にいざなってもらえたという感慨があります。あとは無事卒業式を迎えてくださいな。
 
