--- a/content/posts/2009-05-06-429.md
+++ b/content/posts/2009-05-06-429.md
@@ -14,98 +14,78 @@ GWはゆっくりやすめました。
 
 さて、先週水曜のライブのご報告です。
 
-> [1st Stage]
->
-> 1. I'll Remember April
->
-> 2. Impressions
->
-> 3. Feal Like Maikin' Love feat. @ki
->
-> [2nd Stage]
->
-> 4. Sabor
->
-> 5. Sugar
->
-> 6. Ask Me Now (Piano Trio)
->
-> 7. English Man In New York feat. @ki
->
-> [3rd Stage]
->
-> 8. I Remember Clifford (Tp & Pf Duo)
+### 1st Stage
+1. I'll Remember April
+2. Impressions
+3. Feal Like Maikin' Love feat. @ki
 
-> 9. I'll Drink To That
->
-> 10. What A Diffrence A Day Made feat. honami
->
-> 11. Caravan
->
-> 12. Ribbons In The Sky feat. @ki
->
-> 13. Close To You feat. @ki
+### 2nd Stage
+4. Sabor
+5. Sugar
+6. Ask Me Now (Piano Trio)
+7. English Man In New York feat. @ki
 
-> 4月29日（水／祝）@池袋 Ｂａｒ　Ｈｏｔ　Ｐｅｐｐｅｒ
+### 3rd Stage
+8. I Remember Clifford (Tp & Pf Duo)
+9. I'll Drink To That
+10. What A Diffrence A Day Made feat. honami
+11. Caravan
+12. Ribbons In The Sky feat. @ki
+13. Close To You feat. @ki
+
+---
+
+#### 4月29日（水／祝）@池袋 **Ｂａｒ　Ｈｏｔ　Ｐｅｐｐｅｒ**
 
 すばらしき、２管クインテット。
 
 毎月Groovyなライブをお届け。
 
-[<img class="alignnone size-medium wp-image-791" src="/img/2009/05/CHOCOLATONE_thumbnail-207x300.jpg" alt="CHOCOLATONE_thumbnail" width="207" height="300" srcset="/img/2009/05/CHOCOLATONE_thumbnail-207x300.jpg 207w, /img/2009/05/CHOCOLATONE_thumbnail.jpg 240w" sizes="(max-width: 207px) 100vw, 207px" />][1]
+![CHOCOLATONE_thumbnail](http://www.eawind.net/img/2009/05/CHOCOLATONE_thumbnail-207x300.jpg)
 
-【Chocolatone】
+##### 【Chocolatone】
 
-野下 聖司 (Ts)
+- **野下 聖司** (Ts)
+- **久原 博高** (Tp)
+- **川村 健** (Pf)
+- **風間 進一** (Bs)
+- **山本 亨** (Ds)
 
-久原 博高 (Tp)
+**open** 19:00 **close** 24:00  
+**1st**: 20:00-  
+**2nd**: 21:30-  
+**3rd**: 23:00-
 
-川村 健 (Pf)
+**MC**: 2,500円 （ご飲食は別途になります。おいしいお酒＆カクテル多数ご用意した気軽にたのしめる本格派Ｂａｒです。）
 
-風間 進一 (Bs)
+豊島区西池袋１ー３７ー１５ ロサ会館 隣 西形ビル５Ｆ  
+（03)3971-8669  
+[http://jazzhotpepper.com/](http://jazzhotpepper.com/)
 
-山本 亨 (Ds)
-
-open 19:00 close 24:00 1st: 20:00- 2nd: 21:30- 3rd: 23:00-
-
-MC: 2,500円 （ご飲食は別途になります。　おいしいお酒＆カクテル多数ご用意した気軽にたのしめる本格派Ｂａｒです。）
-
-豊島区西池袋１ー３７ー１５　ロサ会館　隣　西形ビル５Ｆ
-
-（03)3971-8669
-
-<a href="http://jazzhotpepper.com/" target="_blank">http://www.qurie.ne.jp/hotpepper/</a>
+---
 
 ちなみに、GWにやったこと。
 
-> レッスン
->
-> リハ×２
->
-> 今年初のゴキブリを踏みつぶす
->
-> ベランダにできたスズメバチの巣を焼く
->
-> 映画を何本か見る（あ、戦争映画ね）
->
-> 実家に帰って、甥っ子姪っ子と洗車
->
-> 友人のライブを見に行き、感銘を受ける（ちょっと参加させていただいたり）
->
-> ※やり残して明日にやること
->
-> アコーディオンを譲りにさいたま市へ行く
->
-> シュラスコを食べる
->
-> 忘れたイヤホンを取りに実家に帰る
+- レッスン
+- リハ×２
+- 今年初のゴキブリを踏みつぶす
+- ベランダにできたスズメバチの巣を焼く
+- 映画を何本か見る（あ、戦争映画ね）
+- 実家に帰って、甥っ子姪っ子と洗車
+- 友人のライブを見に行き、感銘を受ける（ちょっと参加させていただいたり）
+
+---
+
+※やり残して明日にやること
+
+- アコーディオンを譲りにさいたま市へ行く
+- シュラスコを食べる
+- 忘れたイヤホンを取りに実家に帰る
 
 とまあ、こうやってみると、少々エキセントリックです。まあ元気にやっています。
 
-月が変わって今月５月、Chocolatone は２７日（水）と３０日（土）にライブしますので、Check It Out ! ということで。
+月が変わって今月５月、**Chocolatone** は **２７日（水）** と **３０日（土）** にライブしますので、Check It Out ! ということで。
 
 スケジュールはこちら。
 
-<a href="http://www.eawind.net/" target="_blank">http://<wbr />www.eaw<wbr />ind.net<wbr />/</a>
-
- [1]: /img/2009/05/CHOCOLATONE_thumbnail.jpg
+[http://www.eawind.net/](http://www.eawind.net/)
