--- a/content/posts/2009-05-17-516_62009.md
+++ b/content/posts/2009-05-17-516_62009.md
@@ -42,7 +42,7 @@ categories:
 >
 > 第6回池袋ジャズ・フェスティバル2009
 >
-> <a href="http://www.ikebukurojazz.com/" target="_blank">http://<wbr />www.ike<wbr />bukuroj<wbr />azz.com<wbr />/</a>
+> http://www.ikebukurojazz.com/
 >
 > 1. Love
 >
@@ -66,34 +66,36 @@ categories:
 
 さて、今月も来週、再来週とまだまだライブが続くのですが、まずは次回のライブを告知。
 
-> <big><strong>5月23日（土）＠藤が丘 ブリーズサーファーズバー</strong></big>
+> **5月23日（土）＠藤が丘 ブリーズサーファーズバー**
 >
 > 毎月すばらしき音楽仲間をフィーチャー。今回は横濱三弦トリオ＋三谷さんのボーカルでお届け。
-
+>
 > 自身の第二の部屋で、マスターの気の利いた一杯をお楽しみください。
 >
 > Open: 21:00
-
+>
 > 1st Stage: 21:15
-
+>
 > 2nd Stage: 22:15
-
+>
 > Music Charge: 1,500円 (1ドリンク込)
 >
 > 三谷 和子 (Vo)
-
+>
 > 鎌倉 涼子 (Vln)
-
+>
 > 西 隆則 (Gt)
-
+>
 > 風間 進一 (Bs)
 >
-> <span class="mt-enclosure mt-enclosure-image" style="display: inline;"><a href="/img/2009/05/IMG_4804.jpg"><img class="alignnone size-medium wp-image-797" src="/img/2009/05/IMG_4804-300x200.jpg" alt="IMG_4804" width="300" height="200" srcset="/img/2009/05/IMG_4804-300x200.jpg 300w, /img/2009/05/IMG_4804.jpg 320w" sizes="(max-width: 300px) 100vw, 300px" /></span></a></p>
+> ![代替えテキスト](/img/2009/05/IMG_4804.jpg)
 >
-> <p>
->   Breeze Surfers Bar<br /> 神奈川県横浜市青葉区藤が丘1丁目27-34<br /> 045-972-4500<br /> http://www.eawind.net/breeze_surfers_bar/
-> </p></blockquote>
+> Breeze Surfers Bar
 >
-> <p>
->   今回は、素晴らしい歌声でジャズからポップス、そしてシャンソンまで歌われる三谷さんをお招きしての、おなじみ横濱三弦トリオによるブリサファ公演です。感動いっぱいのライブなること間違いなしなので、この機会にぜひ。
-> </p>
+> 神奈川県横浜市青葉区藤が丘1丁目27-34
+>
+> 045-972-4500
+>
+> http://www.eawind.net/breeze_surfers_bar/
+>
+> 今回は、素晴らしい歌声でジャズからポップス、そしてシャンソンまで歌われる三谷さんをお招きしての、おなじみ横濱三弦トリオによるブリサファ公演です。感動いっぱいのライブなること間違いなしなので、この機会にぜひ。
