--- a/content/posts/2009-05-27-527_zimagine.md
+++ b/content/posts/2009-05-27-527_zimagine.md
@@ -6,54 +6,58 @@ date: 2009-05-26T15:45:03+09:00
 categories:
   - Jazz
 ---
-<big><strong>半年培って来た集大成としてのライブ。どれほどのものか、百聞は一見に如かず。その、目と耳で確かめてください。</strong></big>
+# 🎷 半年培って来た集大成のライブ 🎶  
 
-野下 聖司 (Ts)&#8230;熱き九州男児にして、深みと礼節のあるテナーサックス奏者。そして強きリーダーシップ携えた我がバンドのマスター。
+どれほどのものか、百聞は一見に如かず。  
+その目と耳で確かめてください。  
 
-久原 博高 (Tp)&#8230;想いのこもったトランペットの音色。ここまで、深くしっとり聴かせるトランぺッターには会ったことがない。
+## 🎵 メンバー紹介  
 
-川村 健 (Pf)&#8230;繰りなす音は予測不能。でも、常に深みのある音を出し続ける才能あるピアニスト。これほど秀逸なピアニストに会ったことがない。
+**野下 聖司 (Ts)**  
+熱き九州男児にして、深みと礼節のあるテナーサックス奏者。  
+そして強きリーダーシップを携えた、我がバンドのマスター。  
 
-山本 亨 (Ds) &#8230;素晴らしき、我がバンドのドラマー、そしてムードメーカー。常に繰りなすグルーヴは直感的。彼の垢抜けた謙虚さにかなうプレイヤーはそうそういないと思う。
+**久原 博高 (Tp)**  
+想いのこもったトランペットの音色。  
+ここまで深くしっとりと聴かせるトランペッターには会ったことがない。  
 
-という、すばらしきメンバーでお送りするライブ。
+**川村 健 (Pf)**  
+繰りなす音は予測不能。でも、常に深みのある音を出し続ける才能あるピアニスト。  
+これほど秀逸なピアニストに会ったことがない。  
 
-ぜひ、足を運んでみてください。
+**山本 亨 (Ds)**  
+素晴らしき、我がバンドのドラマー、そしてムードメーカー。  
+常に繰りなすグルーヴは直感的。  
+彼の垢抜けた謙虚さにかなうプレイヤーはそうそういないと思う。  
 
-* * *
+このすばらしきメンバーでお送りするライブ！  
+ぜひ、足を運んでみてください。  
 
-<big><strong>5月27日（水）＠外苑前 Z・imagine</strong></big>
+---
 
-毎月Groovyなライブをお届け。
+## 📅 5月27日（水）＠外苑前 Z・imagine  
 
-今回は私のおすすめで駅からアクセスのよく、雰囲気のよいZ・imagineでライブすることに。
+毎月Groovyなライブをお届け！  
+今回は、駅からアクセスがよく、雰囲気のよい **Z・imagine** で開催します。  
 
-Open: 19:00
+- **Open:** 19:00  
+- **1st Stage:** 19:30  
+- **2nd Stage:** 20:30  
+- **Music Charge:** 2,500円  
 
-1st Stage: 19:30
+### 【Chocolatone】  
+🎷 野下 聖司 (Ts)  
+🎺 久原 博高 (Tp)  
+🎹 川村 健 (Pf)  
+🎸 風間 進一 (Bs)  
+🥁 山本 亨 (Ds)  
 
-2nd Stage: 20:30
+### 📍 会場情報  
+**Z・imagine**  
+東京都港区北青山2-7-17 青山鈴越ビルB1F  
+[公式サイト](http://www.radio-zipangu.com/zimagine/)  
+📞 03-3796-6757  
 
-Music Charge: 2,500円
+---
 
-【Chocolatone】
-
-野下 聖司 (Ts)
-
-久原 博高 (Tp)
-
-川村 健 (Pf)
-
-風間 進一 (Bs)
-
-山本 亨 (Ds)
-
-<br clear="all" />
-
-Z・imagine:
-
-東京都港区北青山2-7-17 青山鈴越ビルB1F
-
-http://www.radio-zipangu.com/zimagine/
-
-03-3796-6757
+🔥 最高の夜を一緒にGrooveしよう！ 
