--- a/content/posts/2009-06-01-530_g.md
+++ b/content/posts/2009-06-01-530_g.md
@@ -6,100 +6,75 @@ date: 2009-05-31T15:58:10+09:00
 categories:
   - Jazz
 ---
-Chocolatone のライブも既に１２回を迎え、ホームとなる目黒での演奏で大勢のお客さんを前にグルーヴィーな演奏を披露させていただきました。
+# Chocolatone ライブレポート & mixi コミュニティ計画
+
+Chocolatone のライブも既に12回を迎え、ホームとなる目黒での演奏で大勢のお客さんを前にグルーヴィーな演奏を披露させていただきました。
 
 また、仕事の同僚とそのお友達がお越しくださり、演奏を楽しんでいただきました。
 
-そこで、mixi に Chocolatone のコミュニティを作ろう計画がもちあがったので、どんなサムネイルとテキストを掲載しようか考え中。。
+そこで、mixi に **Chocolatone のコミュニティを作ろう計画** がもちあがったので、どんなサムネイルとテキストを掲載しようか考え中。。
 
-来月は、さらにな新曲投入で Chocolatone のライブをお送りすることになるかと思います。
+来月は、さらに**新曲投入**で Chocolatone のライブをお送りすることになるかと思います。
 
-> [1st Stage]
+---
 
->   
-> 1. Pfrancing
+## 🎵 Setlist 🎵
 
->   
-> 2. Broadway
+### [1st Stage]
+1. Pfrancing  
+2. Broadway  
+3. Here's That Rainy Days (Piano Trio)  
+4. Impressions  
 
->   
-> 3. Here's That Rainy Days (Piano Trio)
+### [2nd Stage]
+1. Straight Ahead  
+2. Sabor  
+3. Ribbon In The Sky feat. @ki  
+4. Feel Like Makin' Love feat. @ki  
 
->   
-> 4. Impressions
->
-> [2nd Stage]
+### [3rd Stage]
+1. Caravan  
+2. Everything Happen To Me  
+3. Englishman in New York feat. @ki  
+4. Close To You feat. @ki  
 
->   
-> 1. Straight Ahead
+---
 
->   
-> 2. Sabor
+## 🎷 **次回ライブ情報** 🎷
 
->   
-> 3. Ribbon In The Sky feat. @ki
+📅 **5月30日(土) ＠目黒 バンバンG**  
+✨ **すばらしき、２管クインテット。**  
 
->   
-> 4. Feel Like Makin' Love feat. @ki
->
-> [3rd Stage]
+**🎶 毎月Groovyなライブをお届け！**  
+💰 **Music Charge: 1500円**  
 
->   
-> 1. Caravan
+🕖 **19:00 開場**  
+🎼 **1st: 20:00-**  
+🎼 **2nd: 21:00-**  
+🎼 **3rd: 22:00-**  
 
->   
-> 2. Everything Happen To Me
+🚉 **JR目黒駅下車＊徒歩3分**  
 
->   
-> 3. Englishman in New York feat. @ki
+---
 
->   
-> 4. Close To You feat. @ki
+## 【Chocolatone】  
+🎤 **featuring guest @ki (Vo)**  
 
-> 5月30日(土) ＠目黒 バンバンG
->
-> すばらしき、２管クインテット。
+🎷 **野下 聖司 (Ts)**  
+🎺 **久原 博高 (Tp)**  
+🎹 **川村 健 (Pf)**  
+🎸 **風間 進一 (Bs)**  
+🥁 **山本 亨 (Ds)**  
 
->   
-> 毎月Groovyなライブをお届け。
->
-> Music Charge: 1500円
+---
 
->   
-> 19:00開場　1st:20:00-　2nd:21:00-　3rd:22:00-
+## 🎶 **ライブハウス情報** 🎶
 
->   
-> JR目黒駅下車　＊徒歩３分
->
-> 【Chocolatone】
+🏢 **ライブハウス バンバンG**  
+📍 **品川区上大崎2-16-1 目黒開発ビルB1**  
+🌐 [公式サイト](http://www1.cts.ne.jp/~banban-g/)  
+📞 **03-5423-2212**  
 
->   
-> featuring guest @ki (Vo)
-
->   
-> 野下 聖司 (Ts)
-
->   
-> 久原 博高 (Tp)
-
->   
-> 川村 健 (Pf)
-
->   
-> 風間 進一 (Bs)
-
->   
-> 山本 亨 (Ds)
->
-> ライブハウス　バンバンG：
-
->   
-> 品川区上大崎２-１６-１　目黒開発ビルB１
-
->   
-> http://<wbr>www1.ct<wbr>s.ne.jp<wbr>/~banba<wbr>n-g/
-
->   
-> 03-5423-2212
+---
 
 ホームだと、慣れた環境なので、音作りもスムーズにストレスなく演奏に入っていけるので、いいものです。
